log
Thu 20 Apr 2023 04:33:40 PM UTC: 
 tests:  1|8
total_score: 0/70
109b359
Thu 20 Apr 2023 04:59:06 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
0a0b976
Thu 20 Apr 2023 05:09:36 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
c690738
Thu 20 Apr 2023 05:10:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0b3f7d2
Thu 20 Apr 2023 05:29:08 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++----
 1 file changed, 31 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:19: error: the comparison will always evaluate as ‘true’ for the address of ‘searchTreeMap’ will never be NULL [-Werror=address]
   57 |   if(searchTreeMap!=NULL) return;
      |                   ^~
cc1: all warnings being treated as errors
Compilation failed
7a9eaa6
Thu 20 Apr 2023 05:29:58 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
66b48d2
Thu 20 Apr 2023 05:30:21 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
529e825
Thu 20 Apr 2023 05:30:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
351df1f
Thu 20 Apr 2023 05:32:35 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:83:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   83 |   return NULL;
      |          ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb574d8
Thu 20 Apr 2023 05:33:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
19cc952
Thu 20 Apr 2023 05:33:19 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|6
total_score: 15/70
1110d60
Thu 20 Apr 2023 05:33:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
729584d
Thu 20 Apr 2023 05:34:38 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|6
total_score: 15/70
d1560ef
Thu 20 Apr 2023 05:37:42 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
53a55ca
Thu 20 Apr 2023 05:38:01 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
c1fa864
Thu 20 Apr 2023 05:42:57 PM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  11|6
total_score: 15/70
9b435b7
Thu 20 Apr 2023 05:43:14 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
0be36fb
Thu 20 Apr 2023 05:44:08 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:27: error: expected expression before ‘)’ token
   60 |         if(is_equal(tree, ))
      |                           ^
treemap.c:60:12: error: too few arguments to function ‘is_equal’
   60 |         if(is_equal(tree, ))
      |            ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
treemap.c:60:11: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   60 |         if(is_equal(tree, ))
      |           ^
cc1: all warnings being treated as errors
Compilation failed
d93e81d
Fri 21 Apr 2023 07:06:14 PM UTC: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  13|5
total_score: 25/70
f2a579c
Fri 21 Apr 2023 07:18:07 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
91c5f46
Fri 21 Apr 2023 07:19:00 PM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  13|5
total_score: 25/70
7317c09
Fri 21 Apr 2023 07:19:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
37a3884
Fri 21 Apr 2023 07:40:26 PM UTC: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:107:3: error: expected ‘,’ or ‘;’ before ‘}’ token
  107 |   }
      |   ^
treemap.c:106:15: error: unused variable ‘hijo’ [-Werror=unused-variable]
  106 |     TreeNode* hijo = (node->right)
      |               ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
3d4b4e5
Fri 21 Apr 2023 11:19:51 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:107:3: error: expected ‘,’ or ‘;’ before ‘}’ token
  107 |   }
      |   ^
treemap.c:106:15: error: unused variable ‘hijo’ [-Werror=unused-variable]
  106 |     TreeNode* hijo = (node->right)
      |               ^~~~
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
61a6fed
Fri 21 Apr 2023 11:23:14 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
7f911c1
Sat 22 Apr 2023 02:45:04 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:110:19: error: ‘hijo’ may be used uninitialized [-Werror=maybe-uninitialized]
  110 |       node->right = hijo;
      |       ~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
eb5b8db
Sat 22 Apr 2023 02:45:52 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:106:20: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘==’ token
  106 |     TreeNode* hijo == NULL;
      |                    ^~
treemap.c:106:20: error: expected expression before ‘==’ token
treemap.c:110:21: error: ‘hijo’ undeclared (first use in this function)
  110 |       node->right = hijo;
      |                     ^~~~
treemap.c:110:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4afd97a
Sat 22 Apr 2023 02:45:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5c1484d
Sat 22 Apr 2023 02:58:27 PM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:125:24: error: implicit declaration of function ‘minimun’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
  125 |     TreeNode* minimo = minimun(node->right);
      |                        ^~~~~~~
      |                        minimum
treemap.c:125:24: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
cc1: all warnings being treated as errors
Compilation failed
30e864b
Sat 22 Apr 2023 02:58:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b59315
Sat 22 Apr 2023 02:59:31 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
51ed90a
Sat 22 Apr 2023 03:00:40 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1d1c953
Sat 22 Apr 2023 03:07:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
83b2b79
Sat 22 Apr 2023 03:10:53 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
fe4de09
Sat 22 Apr 2023 03:17:11 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
3ac3b9e
